force-app/main/default/objects/Contact/fields/Account_Online_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Online_Status__c</fullName>
    <formula>IF(Account.Online_Status__c=TRUE, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <label>Account Online Status</label>
    <type>Text</type>
</CustomField>