force-app/main/default/objects/Contact/fields/Backend_Sync__c.field-meta.xml
<CustomField>
    <fullName>Backend_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Backend Sync</label>
    <type>Checkbox</type>
</CustomField>