force-app/main/default/objects/Contact/fields/Contact_Opt_in__c.field-meta.xml
<CustomField>
    <fullName>Contact_Opt_in__c</fullName>
    <description>in order to make sure that sensitive invoice data is just send after &quot;opted in&quot;</description>
    <label>Contact Opt-in</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice via Email</fullName>
            </value>
            <value>
                <fullName>Invoice via Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>