force-app/main/default/objects/Contact/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <description>The role the contact plays in the restaurant</description>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Co-owner</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Franchise Contact</fullName>
            </value>
            <value>
                <fullName>Former Owner</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Previous Owner</fullName>
            </value>
            <value>
                <fullName>Ex-employee</fullName>
            </value>
            <value>
                <fullName>Billing Manager</fullName>
            </value>
            <value>
                <fullName>Marketing Manager</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
                <label>duplicate</label>
            </value>
            <value>
                <fullName>Additional Contact</fullName>
                <label>additional contact</label>
            </value>
            <value>
                <fullName>Restaurant Operations</fullName>
            </value>
            <value>
                <fullName>Customer Contact</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Operator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>