force-app/main/default/objects/Contact/fields/Old_SF_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_SF_Record_Id__c</fullName>
    <description>Old SF Record Id, to be used for migrating to new SF</description>
    <label>Old SF Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>