force-app/main/default/objects/Contact/fields/ON_LastUpsert__c.field-meta.xml
<CustomField>
    <fullName>ON_LastUpsert__c</fullName>
    <description>The timestamp of the latest upsert.</description>
    <inlineHelpText>The timestamp of the latest upsert.</inlineHelpText>
    <label>Connector: Last Upsert</label>
    <type>DateTime</type>
</CustomField>