force-app/main/default/objects/Contact/fields/ON_UpsertableSE__c.field-meta.xml
<CustomField>
    <fullName>ON_UpsertableSE__c</fullName>
    <formula>IF( 
OR( 
ISPICKVAL(Contact_Role__c, &quot;Owner&quot;), 
ISPICKVAL(Contact_Role__c, &quot;Billing Manager&quot;) 
), 
TRUE, 
FALSE 
) 
&amp;&amp; 
OR(RecordType.DeveloperName = &quot;SE_Contact&quot;,RecordType.DeveloperName = &quot;FI_Contact&quot;)
&amp;&amp;
NOT(ISNULL(Account.ON_LastUpsert__c))
&amp;&amp;
Account.ON_UpsertableSE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connector: Upsertable SE</label>
    <type>Checkbox</type>
</CustomField>