force-app/main/default/objects/Contact/fields/Passport_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_ID_Number__c</fullName>
    <description>#JIRA:SSC-795</description>
    <label>Passport / ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>