force-app/main/default/objects/Contact/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <description>SSC-1567 - Field represent individual or thing recipient of contact information for a purpose</description>
    <inlineHelpText>Recipient of Contact information</inlineHelpText>
    <label>Recipient</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Taiwan Tax Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>