force-app/main/default/objects/Contact/fields/Record_Country__c.field-meta.xml
<CustomField>
    <fullName>Record_Country__c</fullName>
    <description>Country on related Account</description>
    <formula>TEXT( Account.Record_Country__c )</formula>
    <inlineHelpText>Country on related Account</inlineHelpText>
    <label>Contact Country</label>
    <type>Text</type>
</CustomField>