force-app/main/default/objects/Contact/fields/Translated_Name__c.field-meta.xml
<CustomField>
    <fullName>Translated_Name__c</fullName>
    <label>Translated Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>