force-app/main/default/objects/Contact/recordTypes/CD_Contact.recordType-meta.xml
<RecordType>
    <fullName>CD_Contact</fullName>
    <active>true</active>
    <description>Contact for Click Delivery</description>
    <label>CD Contact</label>
</RecordType>