force-app/main/default/objects/Contact/recordTypes/CZ_Contact.recordType-meta.xml
<RecordType>
    <fullName>CZ_Contact</fullName>
    <active>true</active>
    <label>CZ Contact</label>
</RecordType>