force-app/main/default/objects/Contact/recordTypes/DH_AU_Contact.recordType-meta.xml
<RecordType>
    <fullName>DH_AU_Contact</fullName>
    <active>true</active>
    <label>DH AU Contact</label>
</RecordType>