force-app/main/default/objects/Contact/recordTypes/Facility_Contact.recordType-meta.xml
<RecordType>
    <fullName>Facility_Contact</fullName>
    <active>true</active>
    <label>Facility Contact</label>
</RecordType>