force-app/main/default/objects/Contact/recordTypes/FI_Contact.recordType-meta.xml
<RecordType>
    <fullName>FI_Contact</fullName>
    <active>true</active>
    <description>Finland Contact</description>
    <label>FI Contact</label>
</RecordType>