force-app/main/default/objects/Contact/recordTypes/FP_Contact.recordType-meta.xml
<RecordType>
    <fullName>FP_Contact</fullName>
    <active>true</active>
    <label>FP Contact</label>
</RecordType>