force-app/main/default/objects/Contact/recordTypes/HU_Contact.recordType-meta.xml
<RecordType>
    <fullName>HU_Contact</fullName>
    <active>true</active>
    <label>HU Contact</label>
</RecordType>