force-app/main/default/objects/Contact/recordTypes/PY_Contact.recordType-meta.xml
<RecordType>
    <fullName>PY_Contact</fullName>
    <active>true</active>
    <label>PY Contact</label>
</RecordType>