force-app/main/default/objects/Contact/recordTypes/SE_Contact.recordType-meta.xml
<RecordType>
    <fullName>SE_Contact</fullName>
    <active>true</active>
    <description>Sweden Contact</description>
    <label>SE Contact</label>
</RecordType>