force-app/main/default/objects/Contact/recordTypes/Social_Contact.recordType-meta.xml
<RecordType>
    <fullName>Social_Contact</fullName>
    <active>true</active>
    <label>Social Contact</label>
</RecordType>