force-app/main/default/objects/Contact/recordTypes/Talabat_Contact.recordType-meta.xml
<RecordType>
    <fullName>Talabat_Contact</fullName>
    <active>true</active>
    <label>Talabat Contact</label>
</RecordType>