force-app/main/default/objects/Contact/recordTypes/UK_Contact.recordType-meta.xml
<RecordType>
    <fullName>UK_Contact</fullName>
    <active>true</active>
    <label>UK Contact</label>
</RecordType>