force-app/main/default/objects/Contact/recordTypes/Yogiyo_Contact.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_Contact</fullName>
    <active>true</active>
    <description>Korea Contact Recordtype</description>
    <label>Yogiyo Contact</label>
</RecordType>