force-app/main/default/objects/Contact/validationRules/APAC_Extension_Phone_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>APAC_Extension_Phone_Number</fullName>
    <active>true</active>
    <description>Validation for extension number</description>
    <errorConditionFormula>LEN(Extension_Number__c)&gt;6</errorConditionFormula>
    <errorDisplayField>Extension_Number__c</errorDisplayField>
    <errorMessage>The maximum length of the extension number is 6 digits.</errorMessage>
</ValidationRule>