force-app/main/default/objects/Contact/validationRules/HU_Phone_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>HU_Phone_Format</fullName>
    <active>true</active>
    <description>Check if Phone Number start with +36 or 0036</description>
    <errorConditionFormula>OR( 
AND(RecordType.DeveloperName =&quot;HU_Contact&quot;, 
NOT(ISBLANK(Phone)), 
NOT(AND(OR(LEN(Phone)==11, LEN(Phone)==12), 
LEFT(Phone, 3) == &quot;+36&quot;, 
ISNUMBER(RIGHT(Phone,LEN(Phone)-3))))), 

AND(RecordType.DeveloperName =&quot;HU_Contact&quot;, 
NOT(ISBLANK(MobilePhone)), 
NOT(AND(OR(LEN(MobilePhone)==11, LEN(MobilePhone)==12), 
LEFT(MobilePhone, 3) == &quot;+36&quot;, 
ISNUMBER(RIGHT(MobilePhone,LEN(MobilePhone)-3))))), 

AND(RecordType.DeveloperName =&quot;HU_Contact&quot;, 
NOT(ISBLANK(OtherPhone)), 
NOT(AND(OR(LEN(OtherPhone)==11, LEN(OtherPhone)==12), 
LEFT(OtherPhone, 3) == &quot;+36&quot;, 
ISNUMBER(RIGHT(OtherPhone,LEN(OtherPhone)-3))))) 
)</errorConditionFormula>
    <errorMessage>Phone Number should contain country code and not have spaces</errorMessage>
</ValidationRule>