force-app/main/default/objects/Contact/validationRules/Japan_Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Japan_Phone_Validation</fullName>
    <active>true</active>
    <description>It validates Phone, MobilePhone, OtherPhone fields for Japan</description>
    <errorConditionFormula>IF(AND(RecordType.DeveloperName = &apos;FP_Contact&apos;,
ISPICKVAL(Account.Record_Country__c, &apos;Japan&apos;)),
OR(
AND(
NOT(ISBLANK(Phone)),
OR(
NOT(REGEX(Phone,&quot;^((\\+81)?\\d{10,11})?$&quot;)),
NOT(REGEX(Phone, &quot;\\+[0-9 ]+&quot;))
),
NOT($Permission.Exclude_from_Validation)
),
AND(
NOT(ISBLANK(MobilePhone)),
OR(
NOT(REGEX(MobilePhone,&quot;^((\\+81)?\\d{10,11})?$&quot;)),
NOT(REGEX(MobilePhone, &quot;\\+[0-9 ]+&quot;))
),
NOT($Permission.Exclude_from_Validation)
),
AND(
NOT(ISBLANK(OtherPhone)),
OR(
NOT(REGEX(OtherPhone,&quot;^((\\+81)?\\d{10,11})?$&quot;)),
NOT(REGEX(OtherPhone, &quot;\\+[0-9 ]+&quot;))
),
NOT($Permission.Exclude_from_Validation)
)
)
, false)</errorConditionFormula>
    <errorMessage>Please add phone in the right format. It should start with +81 and be followed by 10 to 11 digits, without space</errorMessage>
</ValidationRule>