force-app/main/default/objects/Contact/validationRules/Philippines_Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Philippines_Phone_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(RecordType.DeveloperName = &apos;FP_Contact&apos;,
ISPICKVAL(Account.Record_Country__c, &apos;Philippines&apos;)),
OR(
AND(
NOT(ISBLANK(Phone)),
OR(
NOT(REGEX(Phone,&quot;^((\\+63)?\\d{8,10})?$&quot;)),
NOT(REGEX(Phone, &quot;\\+[0-9 ]+&quot;))
),
NOT($Permission.Exclude_from_Validation)
),
AND(
NOT(ISBLANK(MobilePhone)),
OR(
NOT(REGEX(MobilePhone,&quot;^((\\+63)?\\d{8,10})?$&quot;)),
NOT(REGEX(MobilePhone, &quot;\\+[0-9 ]+&quot;))
),
NOT($Permission.Exclude_from_Validation)
),
AND(
NOT(ISBLANK(OtherPhone)),
OR(
NOT(REGEX(OtherPhone,&quot;^((\\+63)?\\d{8,10})?$&quot;)),
NOT(REGEX(OtherPhone, &quot;\\+[0-9 ]+&quot;))
),
NOT($Permission.Exclude_from_Validation)
)
)
, false)</errorConditionFormula>
    <errorMessage>Please add phone in the right format. It should start with +63 and be followed by 8 to 10 digits, without space</errorMessage>
</ValidationRule>