force-app/main/default/objects/Contact/validationRules/Phone_Number_format.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_format</fullName>
    <active>true</active>
    <errorConditionFormula>IF($RecordType.DeveloperName = &apos;DE_Contact&apos;,
	NOT(
		AND(
			IF(LEN (Phone) = 0,true,REGEX(Phone, &quot;^[+]{1}[0-9]{2}[1-9]{1}[0-9]{3,12}$&quot;)),
			IF(LEN (HomePhone) = 0,true,REGEX(HomePhone, &quot;^[+]{1}[0-9]{2}[1-9]{1}[0-9]{3,12}$&quot;)),
			IF(LEN (MobilePhone) = 0,true,REGEX(MobilePhone, &quot;^[+]{1}[0-9]{2}[1-9]{1}[0-9]{3,12}$&quot;)),
			IF(LEN (OtherPhone) = 0,true,REGEX(OtherPhone, &quot;^[+]{1}[0-9]{2}[1-9]{1}[0-9]{3,11}$&quot;))
		)
	)
,false)</errorConditionFormula>
    <errorMessage>Telephone numbers have to be formatted like this: +4955523681234 (+CountryCodeAreaCodeNumber).</errorMessage>
</ValidationRule>