force-app/main/default/objects/Contact/validationRules/PY_Validation_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>PY_Validation_Phone</fullName>
    <active>true</active>
    <errorConditionFormula>IF(RecordType.DeveloperName = &apos;PY_Contact&apos;,
    OR(
        AND(
            NOT(ISBLANK(Phone)),
            OR(
                NOT(REGEX(Phone, &quot;^((\\+)?\\d{1,16})?$&quot;)),
                NOT(REGEX(Phone, &quot;\\+[0-9 ]+&quot;))
            ),
            NOT($Permission.Exclude_from_Validation)
        ),
        AND(
            NOT(ISBLANK(MobilePhone)),
            OR(
                NOT(REGEX(MobilePhone, &quot;^((\\+)?\\d{1,16})?$&quot;)),
                NOT(REGEX(MobilePhone, &quot;\\+[0-9 ]+&quot;))
            ),
            NOT($Permission.Exclude_from_Validation)
        ),
        AND(
            NOT(ISBLANK(OtherPhone)),
            OR(
                NOT(REGEX(OtherPhone, &quot;^((\\+)?\\d{1,16})?$&quot;)),
                NOT(REGEX(OtherPhone, &quot;\\+[0-9 ]+&quot;))
            ),
            NOT($Permission.Exclude_from_Validation)
        )
    ), false)</errorConditionFormula>
    <errorMessage>El valor ingresado no es valido</errorMessage>
</ValidationRule>