force-app/main/default/objects/Contact/validationRules/TLB_Contact_Email_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>TLB_Contact_Email_Validation</fullName>
    <active>true</active>
    <description>Contact Email mandatory if country not equal to Egypt.</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;Talabat_Contact&quot;,
ISBLANK(Email),
NOT( ISPICKVAL(  Account.Record_Country__c , &apos;Egypt&apos;))
)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Please enter Email</errorMessage>
</ValidationRule>