force-app/main/default/objects/Contact/listViews/AT_All_Contacts.listView-meta.xml
<ListView>
    <fullName>AT_All_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.AT_Contact</value>
    </filters>
    <label>AT - All Contacts</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>AT_Management</roleAndSubordinates>
    </sharedTo>
</ListView>