force-app/main/default/objects/Contact/listViews/CD_All_Contacts_Ecuador.listView-meta.xml
<ListView>
    <fullName>CD_All_Contacts_Ecuador</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.PHONE4</columns>
    <columns>CONTACT.PHONE5</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.CD_Contact</value>
    </filters>
    <filters>
        <field>CONTACT.CURRENCY_ISO_CODE</field>
        <operation>equals</operation>
        <value>USD</value>
    </filters>
    <label>CD - All Contacts - Ecuador</label>
    <language>en_US</language>
    <sharedTo>
        <role>CD_Management</role>
        <roleAndSubordinates>CD_Customer_Care</roleAndSubordinates>
        <roleAndSubordinates>CD_Sales_Management_Ecuador</roleAndSubordinates>
    </sharedTo>
</ListView>